# quickjs-cmake

./: CMakeLists.txt  Makefile  README.md  generate_defs.bat
